syntax = "proto3";
option java_multiple_files = true;
package org.electrikar.grpc;
import "cars.proto";

message CreateUserRequest
{
  int64 id = 1;
  string legalName = 2;
  string email = 3;
  string password = 4;
  string cpr = 5;
  string phone = 6;
  bool isAdmin = 7;
  bool isBanned = 8;
}

message CreateUserResponse
{
  int64 id = 1;
  string legalName = 2;
  string email = 3;
  string password = 4;
  string cpr = 5;
  string phone = 6;
  bool isAdmin = 7;
  bool isBanned = 8;
}

message UpdateUserRequest
{
  int64 id = 1;
  string legalName = 2;
  string email = 3;
  string password = 4;
  string cpr = 5;
  string phone = 6;
  bool isAdmin = 7;
  bool isBanned = 8;
}

message UpdateUserResponse
{
  int64 id = 1;
  string legalName = 2;
  string email = 3;
  string password = 4;
  string cpr = 5;
  string phone = 6;
  bool isAdmin = 7;
  bool isBanned = 8;
}

message GetUserRequest
{
  string legalName = 1;
}

message GetUserResponse
{
  int64 id = 1;
  string legalName = 2;
  string email = 3;
  string password = 4;
  string cpr = 5;
  string phone = 6;
  bool isAdmin = 7;
  bool isBanned = 8;
}

message DeleteUserRequest
{
  int64 id = 1;
}

message DeleteUserResponse
{
  int64 id = 1;
}

message UsersList
{
  repeated CreateUserResponse users = 1;
}

service UsersService
{
  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
  rpc updateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc getUser(GetUserRequest) returns (GetUserResponse);
  rpc deleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc getUsersList(Empty) returns (UsersList);
}
